saving before 00 fractal canvas implementation

--- a/public/realtime.html
+++ b/public/realtime.html
@@ -103,9 +103,8 @@
                 justify-content: left;
             }
             #stats{
-                display: flex;
-                flex-flow: row;
-                justify-content: left;
+                display: grid;
+                grid-template-columns: 300px 300px;
             }
             .stat{
                 
