V6 zoom mode added

--- a/public/realtime.html
+++ b/public/realtime.html
@@ -130,8 +130,8 @@
                 <div class="GUIbox">
                     <h1 id="modeLabel">Julia Mode</h1>
                 </div>
-                <div class="GUIbox">
-                    <button id="toggle">Toggle Mode</button>
+                <div id="BtnBox" class="GUIbox">
+                    <button id="changeModeBtn">Change Mode</button>
                 </div>
                 
                     
