--- a/public/realtime.html
+++ b/public/realtime.html
@@ -204,7 +204,7 @@
                             <select class="input" id = "functionChoice">
                                 <option>0 : Mandlebrot</option>
                                 <option>1 : Modular Function</option>
-                                <option>2 : Shart</option>
+                                <option>2 : Swiss Cheese</option>
 
                             </select>
 
