heroku added as dependancy

--- a/public/realtime.html
+++ b/public/realtime.html
@@ -160,6 +160,7 @@
                 font-size: 20px;
                 font-family: monospace;
             }
+            
         </style>
 
 
@@ -207,6 +208,8 @@
                                 <option>0 : Mandlebrot</option>
                                 <option>1 : Modular Function</option>
                                 <option>2 : Swiss Cheese</option>
+                                <option>3 : Wave</option>
+
 
                             </select>
 
@@ -226,9 +229,6 @@
         </div>
 
         <div id="lowerDisplay">
-            <h1 id="zoomChoice">TODO!</h1>
-            <h1 id="colorChoice">TODO!</h1>
-            <h1 id="functionChoice">TODO!</h1>
 
         </div>
         <script type="importmap">
