--- a/public/realtime.html
+++ b/public/realtime.html
@@ -188,17 +188,14 @@
                     </div>
 
                     <div id="userInput">
-                        <div class="inputBox">
-                            <name>ZOOM</name>
-                            <input id = "zoomInput" class="input" type="text">
-                        </div>
+                        
                         <div id="colorInput" class="inputBox">
                             <name>COLORWAVE</name>
                             <select class="input" id="colorChoice">
                                 <option>0 : Watermelon</option>
-                                <option>1 : Cicely:)</option>
-                                <option>2 : foo:)</option>
-                                <option>3 : new</option>
+                                <option>1 : B</option>
+                                <option>2 : C</option>
+                                <option>3 : D</option>
 
 
 
@@ -240,7 +237,7 @@
                 }
             }
         </script>
-        <script src="./fractalLIB/CanvasUtil.js"></script>
+        <!-- <script src="./fractalLIB/CanvasUtil.js"></script> -->
         <script type ="module" src="./colorwave.js"></script>
         <script type= "module" src ="./fractalLIB/realtime.js"></script>
 
